# jon

./: .gitignore  Cargo.toml  README.md
.joy/: project.yaml
.joy/items/: JON-0001-C1-jon-mvp-tier-0-pattern-router.yaml  JON-0002-8B-integrate-joy-plugins-into-jon-cli.yaml  JON-0003-40-add-app-flag-to-launch-native-app-plugin.yaml
crates/jon/: Cargo.toml  README.md
crates/jon-cli/: Cargo.toml  README.md
crates/jon-cli/src/: lib.rs  main.rs
crates/jon/src/: main.rs
docs/dev/vision/: README.md
