[package]
name = "jon"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Natural language interface for Joy and Jot (installs jon-cli)"
repository = "https://github.com/joyint/jon"
homepage = "https://joyint.com"
readme = "README.md"

[[bin]]
name = "jon"
path = "src/main.rs"

[dependencies]
