[package]
name = "jon"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Natural language interface for Joy and Jyn - CLI, TUI, and desktop app"
repository = "https://github.com/joyint/jon"
homepage = "https://joyint.com"
readme = "README.md"

[[bin]]
name = "jon"
path = "src/main.rs"

[dependencies]
jon-cli = { version = "0.1.3", path = "../jon-cli" }
anyhow = { workspace = true }
